--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,17 +3,12 @@ name = "rgtk-examples"
 version = "0.0.1"
 authors = ["The Rust-gnome Project Developers"]
 
-[dependencies.gtk]
-git = "https://github.com/rust-gnome/gtk"
-
-[dependencies.gdk]
-git = "https://github.com/rust-gnome/gdk"
-
-[dependencies.glib]
-git = "https://github.com/rust-gnome/glib"
-
-[dependencies.cairo]
-git = "https://github.com/rust-gnome/cairo"
+[dependencies]
+libc = "0.1"
+glib = "^0"
+gdk = "^0"
+gtk = "^0"
+cairo-rs = "^0"
 
 [features]
 gtk_3_10 = ["gtk/gtk_3_10"]
