--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,19 @@ authors = ["The Rust-gnome Project Developers"]
 
 [dependencies]
 libc = "0.1"
+
+[dependencies.glib]
+git = "https://github.com/rust-gnome/glib"
+
+[dependencies.cairo-rs]
+git = "https://github.com/rust-gnome/cairo"
+
+[dependencies.gdk]
+git = "https://github.com/rust-gnome/gdk"
+
+[dependencies.gtk]
+git = "https://github.com/rust-gnome/gtk"
+
 glib = "^0"
 gdk = "^0"
 gtk = "^0"
