--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,13 @@ gtk_3_14 = ["gtk_3_10"]
 name = "basic"
 
 [[bin]]
+name = "builder_basics"
+
+[[bin]]
 name = "cairotest"
+
+[[bin]]
+name = "cairo_threads"
 
 [[bin]]
 name = "gtktest"
@@ -47,6 +53,3 @@ name = "text_viewer"
 
 [[bin]]
 name = "treeview"
-
-[[bin]]
-name = "builder_basics"
