--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,10 @@
 [package]
-name = "rgtk-examples"
+name = "gtk-rs-examples"
 version = "0.0.1"
 authors = ["The Gtk-rs Project Developers"]
 
 [dependencies]
 libc = "0.1"
-
-[dependencies.glib]
-git = "https://github.com/gtk-rs/glib"
-
-[dependencies.cairo-rs]
-git = "https://github.com/gtk-rs/cairo"
-
-[dependencies.gdk]
-git = "https://github.com/gtk-rs/gdk"
-
-[dependencies.gtk]
-git = "https://github.com/gtk-rs/gtk"
-
 glib = "^0"
 gdk = "^0"
 gtk = "^0"
