--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["The Gtk-rs Project Developers"]
 libc = "0.1"
 gl = { version = "^0.1", optional = true }
 glutin = { version = "^0.4", optional = true }
+shared_library = { version = "^0.1", optional = true }
 
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
@@ -24,7 +25,7 @@ git = "https://github.com/gtk-rs/gtk"
 gtk_3_10 = []
 gtk_3_14 = ["gtk_3_10"]
 gtk_3_16 = ["gtk_3_14"]
-opengl = ["gtk_3_16", "gl", "glutin"]
+opengl = ["gtk_3_16", "gl", "glutin", "shared_library"]
 
 [[bin]]
 name = "basic"
