--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,9 @@
 name = "rgtk-examples"
 version = "0.0.1"
 authors = ["The Gtk-rs Project Developers"]
-build = "build.rs"
-
-[build-dependencies]
-gl_generator = { version = "^0.1", optional = true }
-khronos_api = { version = "^0", optional = true }
 
 [dependencies]
 libc = "0.1"
-gl_common = { version = "^0.1", optional = true }
 
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
@@ -24,11 +18,15 @@ git = "https://github.com/gtk-rs/gdk"
 [dependencies.gtk]
 git = "https://github.com/gtk-rs/gtk"
 
+[dependencies.epoxy]
+git = "https://github.com/mjkoo/epoxy-rs.git"
+optional = true
+
 [features]
 gtk_3_10 = []
 gtk_3_14 = ["gtk_3_10"]
 gtk_3_16 = ["gtk_3_14"]
-opengl = ["gtk_3_16", "gl_generator", "khronos_api", "gl_common"]
+opengl = ["gtk_3_16", "epoxy"]
 
 [[bin]]
 name = "basic"
