Change version features to vx_y format

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ git = "https://github.com/gtk-rs/gdk"
 git = "https://github.com/gtk-rs/gtk"
 
 [features]
-gtk_3_10 = ["gtk/3.10"]
+gtk_3_10 = ["gtk/v3_10"]
 gtk_3_18 = ["gtk_3_10"]
 
 [[bin]]
