--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["The Gtk-rs Project Developers"]
 [dependencies]
 glib = "^0"
 gdk = "^0"
+gdk-pixbuf = "^0"
 gtk = "^0"
 cairo-rs = "^0"
 
