--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ authors = ["The Gtk-rs Project Developers"]
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
 
+[dependencies.gio]
+git = "https://github.com/gtk-rs/gio"
+
 [dependencies.cairo-rs]
 git = "https://github.com/gtk-rs/cairo"
 
@@ -20,12 +23,16 @@ git = "https://github.com/gtk-rs/gtk"
 
 [features]
 #default = ["gtk_3_18"]
-gtk_3_10 = ["gtk/v3_10"]
+gtk_3_6  = ["gtk/v3_6"]
+gtk_3_10 = ["gtk_3_6",  "gtk/v3_10"]
 gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
 gtk_3_18 = ["gtk_3_16"] #for CI tools
 
 [[bin]]
 name = "basic"
+
+[[bin]]
+name = "basic_application"
 
 [[bin]]
 name = "builder_basics"
