--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "gtk-rs-examples"
 version = "0.0.1"
 authors = ["The Gtk-rs Project Developers"]
 
+[dependencies]
+chrono = "0.4"
+
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
 
