--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ authors = ["The Gtk-rs Project Developers"]
 [dependencies]
 chrono = "0.4"
 url = "1.4"
+futures-core = { version = "0.2", optional = true }
+futures-executor = { version = "0.2", optional = true }
+futures-channel = { version = "0.2", optional = true }
+futures-util = { version = "0.2", optional = true }
 
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
@@ -30,9 +34,80 @@ git = "https://github.com/gtk-rs/gdk"
 git = "https://github.com/gtk-rs/gtk"
 
 [features]
-#default = ["gtk_3_22"]
+#default = ["gtk_3_22", "futures"]
 gtk_3_10 = ["gtk/v3_10"]
 gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
 gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
 gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
 gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
+futures = ["futures-core", "futures-executor", "futures-channel", "futures-util", "glib/futures", "gio/futures"]
+
+[[bin]]
+name = "basic"
+
+[[bin]]
+name = "builder_basics"
+
+[[bin]]
+name = "cairo_png"
+
+[[bin]]
+name = "cairo_threads"
+
+[[bin]]
+name = "cairotest"
+
+[[bin]]
+name = "child-properties"
+
+[[bin]]
+name = "clock"
+
+[[bin]]
+name = "drag_and_drop"
+
+[[bin]]
+name = "drag_and_drop_textview"
+
+[[bin]]
+name = "gio_futures"
+required-features = ["futures"]
+
+[[bin]]
+name = "grid"
+
+[[bin]]
+name = "gtktest"
+
+[[bin]]
+name = "menu_bar"
+
+[[bin]]
+name = "menu_bar_system"
+
+[[bin]]
+name = "multi_windows"
+
+[[bin]]
+name = "multithreading_context"
+
+[[bin]]
+name = "notebook"
+
+[[bin]]
+name = "pango_attributes"
+
+[[bin]]
+name = "simple_treeview"
+
+[[bin]]
+name = "sync_widgets"
+
+[[bin]]
+name = "text_viewer"
+
+[[bin]]
+name = "transparent_main_window"
+
+[[bin]]
+name = "treeview"
