--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ authors = ["The Gtk-rs Project Developers"]
 chrono = "0.4"
 url = "1.4"
 futures-core = { version = "0.2", optional = true }
-futures-executor = { version = "0.2", optional = true }
-futures-channel = { version = "0.2", optional = true }
 futures-util = { version = "0.2", optional = true }
 
 [dependencies.glib]
@@ -40,7 +38,7 @@ gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
 gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
 gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
 gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
-futures = ["futures-core", "futures-executor", "futures-channel", "futures-util", "glib/futures", "gio/futures"]
+futures = ["futures-core", "futures-util", "glib/futures", "gio/futures"]
 
 [[bin]]
 name = "basic"
