--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ futures-util = { version = "0.2", optional = true }
 futures = { version = "0.2", optional = true }
 futures-macro-async = { version = "0.2", optional = true }
 futures-macro-await = { version = "0.2", optional = true }
-futures-async-runtime = { version = "0.2", optional = true }
 
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
@@ -43,7 +42,7 @@ gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
 gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
 gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
 futures-stable = ["futures-core", "futures-util", "glib/futures", "gio/futures"]
-futures-nightly = ["futures-stable", "glib/futures-nightly", "futures", "futures/nightly", "futures-core/nightly", "futures-macro-async", "futures-macro-async/nightly", "futures-macro-await", "futures-async-runtime", "futures-async-runtime/nightly"]
+futures-nightly = ["futures-stable", "glib/futures-nightly", "futures", "futures/nightly", "futures-core/nightly", "futures-macro-async", "futures-macro-async/nightly", "futures-macro-await"]
 
 [[bin]]
 name = "basic"
