--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,12 +33,13 @@ git = "https://github.com/gtk-rs/gdk"
 git = "https://github.com/gtk-rs/gtk"
 
 [features]
-#default = ["gtk_3_22", "futures-stable"]
+#default = ["gtk_3_22_30", "futures-stable"]
 gtk_3_10 = ["gtk/v3_10"]
 gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
 gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
 gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
 gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
+gtk_3_22_30 = ["gtk_3_22", "gtk/v3_22_29"] #for CI tools
 futures-stable = ["futures-preview", "glib/futures", "gio/futures"]
 futures-nightly = ["futures-stable", "glib/futures-nightly", "futures-preview/nightly", "futures-macro-async-preview", "futures-macro-async-preview/nightly", "futures-macro-await-preview"]
 
