Remove futures-nightly from travis
futures 0.2 is not maintained any longer and the nightly parts don't
build with the latest nightly toolchain anymore.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ git = "https://github.com/gtk-rs/sys"
 git = "https://github.com/gtk-rs/sys"
 
 [features]
-#default = ["gtk_3_22_30", "futures-nightly"]
+#default = ["gtk_3_22_30", "futures-stable"]
 gtk_3_10 = ["gtk/v3_10"]
 gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
 gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
