--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,37 +7,16 @@ authors = ["The Gtk-rs Project Developers"]
 chrono = "0.4"
 url = "1.4"
 futures-preview = { version = "0.2", optional = true }
-
-[dependencies.glib]
-git = "https://github.com/gtk-rs/glib"
-
-[dependencies.gio]
-git = "https://github.com/gtk-rs/gio"
-
-[dependencies.cairo-rs]
-git = "https://github.com/gtk-rs/cairo"
-features = ["png"]
-
-[dependencies.pango]
-git = "https://github.com/gtk-rs/pango"
-
-[dependencies.gdk-pixbuf]
-git = "https://github.com/gtk-rs/gdk-pixbuf"
-
-[dependencies.gdk]
-git = "https://github.com/gtk-rs/gdk"
-
-[dependencies.gtk]
-git = "https://github.com/gtk-rs/gtk"
-
-[dependencies.gobject-subclass]
-git = "https://github.com/gtk-rs/gobject-subclass"
-
-[dependencies.glib-sys]
-git = "https://github.com/gtk-rs/sys"
-
-[dependencies.gobject-sys]
-git = "https://github.com/gtk-rs/sys"
+glib = "0.6"
+gio = "0.5"
+pango = "0.5"
+gdk-pixbuf = "0.5"
+gdk = "0.9"
+gtk = "0.5"
+gobject-subclass = "0.2"
+glib-sys = "0.7"
+gobject-sys = "0.7"
+cairo-rs = { version = "0.5", features = ["png"] }
 
 [features]
 #default = ["gtk_3_22_30", "futures-stable"]
