--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ chrono = "0.4"
 url = "1.4"
 futures-preview = { version = "0.2", optional = true }
 
+[dependencies.atk]
+git = "https://github.com/gtk-rs/atk"
+
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
 
@@ -50,6 +53,9 @@ gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
 gtk_3_22_30 = ["gtk_3_22", "gtk/v3_22_30"] #for CI tools
 gio_2_40 = ["gio/v2_40"]
 futures-stable = ["futures-preview", "glib/futures", "gio/futures"]
+
+[[bin]]
+name = "accessibility"
 
 [[bin]]
 name = "basic"
